--- a/src/app/components/bars/detail-bar/detail-bar.component.html
+++ b/src/app/components/bars/detail-bar/detail-bar.component.html
@@ -23,7 +23,7 @@ style="margin-left: 0;"
       <img class="w-full h-full rounded flex-initial" src="{{bar.main_image}}" alt="main_image_bar">
     </div>
 
-    <div id="ladilla" class="sm:grid sm:grid-cols-2 sm:gap-4 md:flex md:flex-wrap lg:flex-no-wrap md:flex-no-wrap md:xs md:pt-16">
+    <div id="bar-image" class="sm:grid sm:grid-cols-2 sm:gap-4 md:flex md:flex-wrap lg:flex-no-wrap md:flex-no-wrap md:xs md:pt-16">
       <div
       *ngFor="let x of images"
       class="md:w-1/3 md:px-2 overflow-hidden my-2"
