--- a/src/app/components/drinks/show-filter/show-filter.component.html
+++ b/src/app/components/drinks/show-filter/show-filter.component.html
@@ -126,7 +126,7 @@
                   >
                       <input
                       class="transition ease-in duration-300 bg-gray-200 mb-6 md:mb-12 appearance-none border-2 border-gray-200 rounded w-8/12 md:w-4/12 py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500 "
-                      id="inline-full-name"
+                      id="search"
                       type="text"
                       placeholder="Ej. Fresa"
                       [(ngModel)]="search_bar" 
