--- a/src/app/components/admin/ad/add-ad/add-ad.component.html
+++ b/src/app/components/admin/ad/add-ad/add-ad.component.html
@@ -26,7 +26,7 @@
           <div class="md:w-full lg:w-1/5">
             <label
               class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
-              for="inline-full-name"
+              for="name"
             >
               Nombre de la empresa
             </label>
@@ -36,6 +36,7 @@
               formControlName="client"
               class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
               type="text"
+              id="name"
               placeholder="Ej. Empresas Polar"
             />
           </div>
@@ -51,7 +52,7 @@
               <label
                 style="font-family: 'Open Sans', sans-serif;"
                 class="block text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
-                for="inline-full-name"
+                for="title-galery"
               >
                 Galería
               </label>
@@ -60,7 +61,7 @@
               <label
                 style="font-family: 'Open Sans', sans-serif;"
                 class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4"
-                for="inline-full-name"
+                for="descriptio-galery"
               >
                 Por favor, esperar a que aparezcan las fotos. Esto indicará que
                 fueron cargadas con éxito.
@@ -72,7 +73,7 @@
             <div class="md:w-full lg:w-1/5">
               <label
                 class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
-                for="inline-full-name"
+                for="main-image"
               >
                 Foto
               </label>
