--- a/src/app/components/admin/ad/edit-ad/edit-ad.component.html
+++ b/src/app/components/admin/ad/edit-ad/edit-ad.component.html
@@ -27,7 +27,7 @@
           <div class="md:w-full lg:w-1/5">
             <label
               class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
-              for="inline-full-name"
+              for="name"
             >
               Nombre
             </label>
@@ -36,7 +36,7 @@
             <input
               formControlName="client"
               class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-              
+              id="name"
               type="text"
               placeholder="Ej. Ron"
             />
@@ -54,7 +54,7 @@
               <label
                 style="font-family: 'Open Sans', sans-serif;"
                 class="block text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
-                for="inline-full-name"
+                for="title-galery"
               >
                 Galería
               </label>
@@ -63,7 +63,7 @@
               <label
                 style="font-family: 'Open Sans', sans-serif;"
                 class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4"
-                for="inline-full-name"
+                for="description-galery"
               >
                 Por favor, esperar a que aparezcan las fotos. Esto indicará que
                 fueron cargadas con éxito.
@@ -75,7 +75,7 @@
             <div class="md:w-full lg:w-1/5">
               <label
                 class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
-                for="inline-full-name"
+                for="main-image"
               >
                 Foto
               </label>
