--- a/src/app/components/admin/drink/edit-drink/edit-drink.component.html
+++ b/src/app/components/admin/drink/edit-drink/edit-drink.component.html
@@ -28,7 +28,7 @@
               <div class="md:w-full lg:w-1/5">
               <label
                 class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
-                for="inline-full-name"
+                for="name"
               >
                 Nombre
               </label>
@@ -37,7 +37,7 @@
               <input
                 formControlName="name"
                 class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                
+                id="name"
                 type="text"
                 placeholder="Ej. Margarita"
               />
@@ -56,7 +56,7 @@
               <div class="md:w-full lg:w-1/5">
             <label
               class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
-              for="inline-full-name"
+              for="description"
             >
               Descripción
             </label>
@@ -65,7 +65,7 @@
             <input
               formControlName="description"
               class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-              
+              id="description"
               type="text"
               placeholder=""
             />
@@ -82,7 +82,7 @@
               <div class="md:w-full lg:w-1/5">
             <label
               class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
-              for="inline-full-name"
+              for="recipe"
             >
               Receta
             </label>
@@ -95,6 +95,7 @@
               rows="10" cols="30"
               placeholder="Introduzca el paso a paso de la receta..."
               style= "white-space: pre-line; white-space: pre-wrap;"
+              id="recipe"
               >
             </textarea>
           <!--
@@ -119,7 +120,7 @@
               <div class="md:w-full lg:w-1/5">
             <label
               class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
-              for="inline-full-name"
+              for="owner_name"
             >
               Creador
             </label>
@@ -128,9 +129,9 @@
             <input
               formControlName="owner_name"
               class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-              
+              id="owner_name"
               type="text"
-              placeholder="Ej. USERNAME"
+              placeholder="Ej. username"
             />
           </div>
           </div>
@@ -145,7 +146,7 @@
               <div class="md:w-full lg:w-1/5">
             <label
               class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
-              for="inline-full-name"
+              for="rol"
             >
               Rol
             </label>
@@ -156,7 +157,7 @@
               class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
               id="grid-state"
             >
-              <option [value]="item" *ngFor="let item of categories">{{
+              <option id="{{item}}" [value]="item" *ngFor="let item of categories">{{
                 item
               }}</option>
             </select>
@@ -187,7 +188,7 @@
                     <label
                       style="font-family: 'Open Sans', sans-serif;"
                       class="block text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
-                      for="inline-full-name"
+                      for="title-galery"
                     >
                       Galería
                     </label>
@@ -196,7 +197,7 @@
                     <label
                       style="font-family: 'Open Sans', sans-serif;"
                       class="text-lg md:text-xl block text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
-                      for="inline-full-name"
+                      for="description-galery"
                     >
                       Por favor, esperar a que aparezcan las fotos. Esto indicará que
                       fueron cargadas con éxito.
@@ -208,7 +209,7 @@
                   <div class="md:w-full lg:w-1/5">
                     <label
                       class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
-                      for="inline-full-name"
+                      for="main_image"
                     >
                       Foto
                     </label>
@@ -255,7 +256,7 @@
                       <label
                         style="font-family: 'Open Sans', sans-serif;"
                         class="block md:text-2xl text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
-                        for="inline-full-name"
+                        for="title-ingredients"
                       >
                         Lista de ingredientes
                       </label>
@@ -264,7 +265,7 @@
                       <label
                         style="font-family: 'Open Sans', sans-serif;"
                         class="text-lg md:text-xl block text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
-                        for="inline-full-name"
+                        for="description-ingredients"
                       >
                         ¿No encuentras el ingrediente? ¡Creálo!
                       </label>
@@ -290,7 +291,7 @@
                         <div class="w-full lg:w-1/5">
                           <label
                             class="block text-black-500 font-bold lg:text-right mb-1 md:mb-6 pr-4"
-                            for="inline-full-name"
+                            for="ingredient-{{i}}"
                           >
                             Ingrediente
                           </label>
@@ -303,7 +304,7 @@
                               formControlName="ingredients"
                               list="ing_list"
                               class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                              
+                              id="ingredient-{{i}}"
                               type="text"
                               placeholder="Ej. Fresa" 
                               [matAutocomplete]="auto"
@@ -464,7 +465,7 @@
           <div class="md:w-full lg:w-1/5">
             <label
               class="text-2xl block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
-              for="inline-full-name"
+              for="name_ing"
             >
               Nombre
             </label>
@@ -473,7 +474,7 @@
             <input
               formControlName="name_ing"
               class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-              
+              id="name_ing"
               type="text"
               placeholder="Ej. Ron"
             />
@@ -490,7 +491,7 @@
           <div class="md:w-full lg:w-1/5">
             <label
               class="text-2xl block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
-              for="inline-full-name"
+              for="category_ing"
             >
               Categoría
             </label>
@@ -501,7 +502,7 @@
               class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
               id="grid-state"
             >
-              <option [value]="item" *ngFor="let item of categories_ing">{{
+              <option id="{{item}}" [value]="item" *ngFor="let item of categories_ing">{{
                 item
               }}</option>
             </select>
@@ -531,7 +532,7 @@
             <label
               style="font-family: 'Open Sans', sans-serif;"
               class="block md:text-2xl text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
-              for="inline-full-name"
+              for="title-galery-ing"
             >
               Galería
             </label>
@@ -540,7 +541,7 @@
             <label
               style="font-family: 'Open Sans', sans-serif;"
               class="text-lg md:text-xl block text-black-500 font-bold text-center mb-1 md:mb-0 pr-4"
-              for="inline-full-name"
+              for="description-galery-ing"
             >
               Por favor, esperar a que aparezcan las fotos. Esto indicará que
               fueron cargadas con éxito.
@@ -552,7 +553,7 @@
             <div class="md:w-full lg:w-1/5">
               <label
                 class="text-2xl block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
-                for="inline-full-name"
+                for="main-image-ing"
               >
                 Ícono
               </label>
