--- a/src/app/components/admin/zone/add-zone/add-zone.component.html
+++ b/src/app/components/admin/zone/add-zone/add-zone.component.html
@@ -21,7 +21,7 @@
           <div class="md:w-full lg:w-1/5">
             <label
               class="block text-black-500 font-bold lg:text-right mb-1 md:mb-0 pr-4"
-              for="inline-full-name"
+              for="name"
             >
               Nombre
             </label>
@@ -29,7 +29,7 @@
           <div class="md:w-full lg:w-4/5">
             <input formControlName="name"
               class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-              
+              id="name"
               type="text"
               placeholder="Ej. Las Mercedes"
             />
