--- a/src/app/components/recipe/recipe.component.html
+++ b/src/app/components/recipe/recipe.component.html
@@ -10,7 +10,24 @@
     <div style="max-width: 90%"
     class="my-6 p-3 pb-6 mt-12 bg-cover  m-auto self-center  shadow">
         <div class="md:flex flex-wrap self-center pt-8 px-8 sm:px-16 md:px-48">
-            <img class="object-contain sm:h-auto sm:max-w-3xl md:h-auto md:max-w-3xl pb-4 sm:px-16 md:px-16 sm:py-8 md:py-8" src="{{receta.pictures}}" alt="mojito">
+            <div class="drink_img"
+          style="  background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+          position: relative; "
+          [style.backgroundImage]="'url('+ receta.pictures +')'"
+          (click)="detail(item._id)"
+          >
+
+          <button (click)="fav($event, receta._id)" 
+          class="rounded-full w-12 h-12   rounded-full  opacity-75 bg-white m-2 hover:bg-orange-300 transition ease-in duration-300" >
+              <img  class="p-1" src="https://image.flaticon.com/icons/svg/1828/1828970.svg" alt="fav" *ngIf="!is_fav(receta._id)">
+              <img  class="p-1" src="https://image.flaticon.com/icons/svg/1828/1828614.svg" alt="no-fav" *ngIf="is_fav(receta._id)">
+          </button>
+
+            
+            <!-- CAMBIAR A ORANGE CON CLICK -->
+          </div>
             <div class="info pl-4 sm:pl-8 md:pl-16">
                 <div class="w-full text-3xl pt-4 sm:pt-4 sm:text-3xl md:text-5xl font-medium">{{receta.name}}</div>
                 <div class="text-normal sm:text-3xl md:text-3xl pt-4">Ingredientes</div>
