--- a/src/app/components/recipe/recipe.component.scss
+++ b/src/app/components/recipe/recipe.component.scss
@@ -19,3 +19,29 @@
 
 
 }
+
+.drink_img{
+
+    width: 100%;
+    height: 30rem;
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 1rem;
+  /* Medium (md) */
+  @media (min-width: 768px) { 
+    height: 50rem;
+    width: 50rem;
+    margin-bottom: 2rem;
+
+
+   }
+  /* Large (lg) */
+  @media (min-width: 1024px) { 
+    height: 40rem;
+    width: 40rem;
+    margin-bottom: 2rem;
+
+      
+  }
+
+  }
